--- a/index.html
+++ b/index.html
@@ -8,12 +8,26 @@
     <title>jyahn javascript challenge</title>
 </head>
 <body>
+<div id="weather">
+        <span></span>
+        <span></span>
+</div>
+<h2 id="clock">00:00:00</h2>
+<form>
+<input required type="text" placeholder="what is your name?" />
+</form>
 
+<h1 class="hidden" id="hello"></h1>
 
 <form id="todo-form">
     <input required type="text" placeholder="write a To Do and press Enter" />
 </form>
 <ul id="todo-list"></ul>
+<div id="quote">
+    <span></span>
+    <span></span>
+</div>
+
 <div id="quote">
     <span></span>
     <span></span>
