--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div id="weather">
-        <span></span>
+        <span class="region"></span>
         <span></span>
 </div>
 <h2 id="clock">00:00:00</h2>
